--- a/package.json
+++ b/package.json
@@ -6,17 +6,9 @@
   "scripts": {
     "sass:watch": "sass --no-source-map --watch src/main.scss assets/main.css"
   },
-  "author": "JR",
+  "author": "rl86",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.69.7"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JrSchoolAccount/Group-Assignment2-Cinema-Project.git"
-  },
-  "bugs": {
-    "url": "https://github.com/JrSchoolAccount/Group-Assignment2-Cinema-Project/issues"
-  },
-  "homepage": "https://github.com/JrSchoolAccount/Group-Assignment2-Cinema-Project#readme"
+    "sass": "^1.71.1"
+  }
 }
